# CG

./: CPP_notes.md  README.md
01/0/: main.cpp
01/2_rasterize/: main.cpp
01/3_shading/: readme.md
01/4_geometry/: main.cpp
01/5_raytrace/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp  readme.md
01/6_bvh/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Scene.cpp  Triangle.hpp
01/7_pathtrace/: BVH.cpp  Bounds3.hpp  Material.hpp  README.md  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
01/7_pathtrace_v1/: Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  Object.hpp  Ray.hpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp  readme.md
01/asgn2_rasterize/: readme.md
01/asgn3_shading/: CMakeLists.txt
101/asgn1/: CMakeLists.txt  main.cpp  notes.md  rasterizer.cpp
101/asgn1_transform/: notes.md  readme.md
101/asgn2_rasterize/: main.cpp  rasterizer.cpp  rasterizer.hpp  readme.md
101/asgn3_shading/: CMakeLists.txt  main.cpp  rasterizer.cpp  readme.md
101/asgn4_geometry/: main.cpp  readme.md
